@@ -34,6 +34,18 @@ namespace scene
 		/** Please note that you will have to drop
 		(IReferenceCounted::drop()) the returned pointer after calling this. */
 		virtual ISceneNodeAnimator* createClone(ISceneNode* node, ISceneManager* newManager=0) _IRR_OVERRIDE_;
+		
+		//! Reset a time-based movement by changing the starttime. 
+		virtual void setStartTime(u32 time) _IRR_OVERRIDE_
+		{
+			StartTime = time;
+		}
+		
+		//! Get the starttime. 
+		virtual irr::u32 getStartTime() const _IRR_OVERRIDE_
+		{
+			return StartTime;
+		}
 
 	private:
 
